added writing page

--- a/posts/writing/first.mdx
+++ b/posts/writing/first.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Test Post 1"
-publishedAt: "2021-12-12"
+publishedAt: "Jan 01"
 description: "Blog test I dunno what to write here and why bla bla bla bla bla"
 ---
 
