more work on the mdx design system

--- a/posts/writing/third.mdx
+++ b/posts/writing/third.mdx
@@ -22,7 +22,19 @@ This is a simple text
 
 > Blockquote ?
 
-`Inline code so cool`
+_empasized text_
+
+**bold text**
+
+List:
+
+- example1
+- example2
+- example 3
+
+---
+
+Try this line of code `console.log(help())`
 
 ```
 interface IProps{
