fixed article typo

--- a/posts/writing/finally-shipping.mdx
+++ b/posts/writing/finally-shipping.mdx
@@ -22,7 +22,7 @@ This is a place full of imperfections that make it _unique_ in it's own way, a p
 
 ## What to expect
 
-As said in the title, this blog will be a place where I share _thoughts and ideas_ that I find interesting and worth writing about.
+As said in the description of the article, this blog will be a place where I share _thoughts and ideas_ that I find interesting and worth writing about.
 
 The articles are going to circle the _UI_ and _Frontend Engineering_ zone, born from _curiosity_ and _inspiration_.
 
