--- a/posts/writing/finally-shipping.mdx
+++ b/posts/writing/finally-shipping.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Finally shipping in 2022..."
 publishedAt: "Jan 01"
-description: "After a year full of 'I will definetly finish my blog', there it is"
+description: "After a year full of 'I will definetly finish my blog', there it is."
 ---
 
 ## 2021
