vertical align theme changer, redesign anchor tags, increased h1 font size, changed font to inter, ...

--- a/posts/writing/finally-shipping.mdx
+++ b/posts/writing/finally-shipping.mdx
@@ -28,4 +28,4 @@ The articles are going to circle the _UI_ and _Frontend Engineering_ zone, born 
 
 ## Kudos
 
-I would like to say a big **thank you** to [@raunofreiberg](https://twitter.com/raunofreiberg), [@pacocoursey](https://twitter.com/pacocoursey), [@peduarte](https://twitter.com/peduarte), [@emilkowalski\_](https://twitter.com/emilkowalski_), [@brian_lovin](https://twitter.com/brian_lovin), [@siddharthkp](https://twitter.com/siddharthkp), [@JoshWComeau](https://twitter.com/JoshWComeau), [@devsgnr\_](https://twitter.com/devsgnr_), [@LorinMuller](https://twitter.com/LorinMuller), [@pfeiffer_andrei](https://twitter.com/pfeiffer_andrei), the **awesome guys from Victory Square Partners** and surely many others, from which I took a lot of inspiration from and also learned a significant amount of programming in the last year and hopefully, many years ahead.
+I would like to say a big **thank you** to [@raunofreiberg](https://twitter.com/raunofreiberg), [@pacocoursey](https://twitter.com/pacocoursey), [@peduarte](https://twitter.com/peduarte), [@emilkowalski\_](https://twitter.com/emilkowalski_), [@brian_lovin](https://twitter.com/brian_lovin), [@siddharthkp](https://twitter.com/siddharthkp), [@JoshWComeau](https://twitter.com/JoshWComeau), [@devsgnr\_](https://twitter.com/devsgnr_), [@LorinMuller](https://twitter.com/LorinMuller), [@pfeiffer_andrei](https://twitter.com/pfeiffer_andrei), the **awesome guys from Victory Square Partners** and surely many others, from which I took a lot of inspiration and also learned a significant amount of programming in the last year and hopefully, many years ahead.
