--- a/posts/writing/finally-shipping.mdx
+++ b/posts/writing/finally-shipping.mdx
@@ -29,3 +29,7 @@ The articles are going to circle the _UI_ and _Frontend Engineering_ zone, born 
 ## Kudos
 
 I would like to say a big **thank you** to [@raunofreiberg](https://twitter.com/raunofreiberg), [@pacocoursey](https://twitter.com/pacocoursey), [@peduarte](https://twitter.com/peduarte), [@emilkowalski\_](https://twitter.com/emilkowalski_), [@brian_lovin](https://twitter.com/brian_lovin), [@siddharthkp](https://twitter.com/siddharthkp), [@JoshWComeau](https://twitter.com/JoshWComeau), [@devsgnr\_](https://twitter.com/devsgnr_), [@LorinMuller](https://twitter.com/LorinMuller), [@pfeiffer_andrei](https://twitter.com/pfeiffer_andrei), the **awesome guys from Victory Square Partners** and surely many others, from which I took a lot of inspiration and also learned a significant amount of programming in the last year and hopefully, many years ahead.
+
+### Created
+
+Built with [Next.js](https://nextjs.org), using [Tailwind CSS](https://tailwindcss.com/) and [Radix Primitives](https://www.radix-ui.com/). Deployed with [Vercel](https://vercel.com).
