--- a/posts/writing/finally-shipping.mdx
+++ b/posts/writing/finally-shipping.mdx
@@ -16,7 +16,7 @@ However, on the _31st of December_, this idea of having a blog has changed drama
 
 Today, the **1st of January 2022**, I've said to myself that I finally _need to ship_ something, and there it is.
 
-I've decided to create a place that _feels just like me_, without any "show-off stuff" that does not make any sense. Creating an interface with a simple yet clean UI, with just shades of gray, typography, whitespaces, some gradients and colorful underlines.
+I've decided to create a place that _feels just like me_, without any "show-off stuff" that does not make any sense. Creating an interface with a simple yet clean UI, with just shades of gray, typography, whitespaces, and some gradients.
 
 This is a place full of imperfections that make it _unique_ in it's own way, a place that will probably be in a forever _work in progress_ state, a place that _I love_.
 
@@ -29,7 +29,5 @@ The articles are going to circle the _UI_ and _Frontend Engineering_ zone, born 
 ## Kudos
 
 I would like to say a big **thank you** to [@raunofreiberg](https://twitter.com/raunofreiberg), [@pacocoursey](https://twitter.com/pacocoursey), [@peduarte](https://twitter.com/peduarte), [@emilkowalski\_](https://twitter.com/emilkowalski_), [@brian_lovin](https://twitter.com/brian_lovin), [@siddharthkp](https://twitter.com/siddharthkp), [@JoshWComeau](https://twitter.com/JoshWComeau), [@devsgnr\_](https://twitter.com/devsgnr_), [@LorinMuller](https://twitter.com/LorinMuller), [@pfeiffer_andrei](https://twitter.com/pfeiffer_andrei), the **awesome guys from Victory Square Partners** and surely many others, from which I took a lot of inspiration and also learned a significant amount of programming in the last year and hopefully, many years ahead.
-
-### Created
 
 Built with [Next.js](https://nextjs.org), using [Tailwind CSS](https://tailwindcss.com/) and [Radix Primitives](https://www.radix-ui.com/). Deployed with [Vercel](https://vercel.com).
