--- a/posts/writing/finally-shipping.mdx
+++ b/posts/writing/finally-shipping.mdx
@@ -10,11 +10,15 @@ I've been constantly saying in the last 7-8 months that _I will definitely finis
 
 Going through at least **5 iterations**, all almost completely different from the other, from the way they we're looking, the technologies I was using and the enormous quantity of _useless_ features put just to show-off my UI skills.
 
-However, on the _31st of December_, this idea of having a blog has changed dramatically from the moment that I was starting designing and coding each iteration.
+However, on the _31st of December_, everything changed from the moment that I started designing and coding each iteration.
 
 ## Now
 
-Today, the **1st of January 2022**, I've said to myself that I finally _need to ship_ something, and there it is.
+> "Your creation is never ready..." - Rauno Freiberg
+
+After reading Rauno's article, [Real artists ship](https://rauno.me/writing/real-artists-ship), the idea of having a blog has changed dramatically.
+
+That being said, today, the **1st of January 2022**, I've said to myself that I am going to finally _ship_ something, so I'm starting with a project that's personal and important to me, my personal website.
 
 I've decided to create a place that _feels just like me_, without any "show-off stuff" that does not make any sense. Creating an interface with a simple yet clean UI, with just shades of gray, typography, whitespaces, and some gradients.
 
