--- a/posts/index.mdx
+++ b/posts/index.mdx
@@ -6,19 +6,19 @@ description: "A blog fullfilled with curiosities and good vibes."
 
 #### hi there, I'm Marius 👋🏽
 
-a fullstack developer and student at Politehnica University Timisoara (Computer Engineering) who _loves_ building and experimenting modern solutions using cutting-edge technologies.
+fullstack developer at [Victory Square Partners](https://www.linkedin.com/company/victorysqpartners) and student in the third year at [Politehnica University Timisoara](https://ac.upt.ro/) (Computer Engineering) who _loves_ building and experimenting modern solutions using cutting-edge technologies.
+
+Mainly building _web applications_ with React, Next, Go and Node. Interested in UI/UX Engineering, design systems and learning Rust and Swift.
+
+I'm _learning by building_, always having a positive mindset accompanied by a _can-do_ attitude.
 
 My _development journey_ as a fullstack developer started at the end of 2019, when I was in the first year of university and discovered React. I can certainly say that I have instantly fallen in love with it.
 Shortly after, I wanted my projects to be more interactive so I went ahead and decided to learn more about backend, started by picking up Node with Mongo/Firebase and then learned the basics of SQL.
 
-After a year of building my ideas where everything felt perfect, I wanted to step out of my comfort zone (February-March 2021) and applied to several outsourcing companies. This landed my first internship, which turned in an amazing full time job (where I'm still working) at [Victory Square Partners](https://www.linkedin.com/company/victorysqpartners).
-
-I'm _learning by building_, always having a positive mindset accompanied by a _can-do_ attitude.
-
-Mainly building _web applications_ with React, Next.js, Go, Node. Interested in design systems and learning Rust and Swift.
+After a year of building my ideas where everything felt perfect, I wanted to step out of my comfort zone (February-March 2021) and applied to several outsourcing companies. This landed my first internship, which turned in an amazing full time job (where I'm still working).
 
 When I'm not working, I _enjoy_ listening to electronic music, watching a crazy load of youtube videos and hanging out with my friends.
 
 ## Connect
 
-Do you want to connect? Feel free to reach me at [hi@mariusflorescu.io](mailto:hi@mariusflorescu.io) or on twitter [@\_mariusflorescu](https://twitter.com/_mariusflorescu).
+Feel free to reach me at [hi@mariusflorescu.io](mailto:hi@mariusflorescu.io) or on twitter [@\_mariusflorescu](https://twitter.com/_mariusflorescu).
