more polishing on articles

--- a/posts/index.mdx
+++ b/posts/index.mdx
@@ -15,9 +15,9 @@ I'm _learning by building_, always having a positive mindset accompanied by a _c
 My _development journey_ as a fullstack developer started at the end of 2019, when I was in the first year of university and discovered React. I can certainly say that I have instantly fallen in love with it.
 Shortly after, I wanted my projects to be more interactive so I went ahead and decided to learn more about backend, started by picking up Node with Mongo/Firebase and then learned the basics of SQL.
 
-After a year of building my ideas where everything felt perfect, I wanted to step out of my comfort zone (February-March 2021) and applied to several outsourcing companies. This landed my first internship, which turned in an amazing full time job (where I'm still working).
+After a year of building my ideas where everything felt perfect, I wanted to step out of my comfort zone (February-March 2021) and applied to several outsourcing companies. This landed my first internship, which turned in an amazing full time job.
 
-When I'm not working, I _enjoy_ listening to electronic music, watching a crazy load of youtube videos and hanging out with my friends.
+When I'm not working, I _enjoy_ traveling, long car rides, listening to electronic music, watching a crazy load of youtube videos and hanging out with my friends.
 
 ## Connect
 
