updated article and font size on post description

--- a/posts/writing/finally-shipping.mdx
+++ b/posts/writing/finally-shipping.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Finally shipping in 2022..."
 publishedAt: "Jan 01"
-description: "After a year full of 'I will definetly finish my blog', there it is."
+description: "After a year full of 'I will definetly finish my blog', here I am finally shipping it."
 ---
 
 ## 2021
@@ -28,7 +28,7 @@ This is a place full of imperfections that make it _unique_ in it's own way, a p
 
 As said in the description of the article, this blog will be a place where I share _thoughts and ideas_ that I find interesting and worth writing about.
 
-The articles are going to circle the _UI_ and _Frontend Engineering_ zone, born from _curiosity_ and _inspiration_.
+The articles are going to circle around the _UI/UX_ and _Frontend Engineering_ zone, all born from _curiosity_ and _inspiration_.
 
 ## Kudos
 
