--- a/posts/index.mdx
+++ b/posts/index.mdx
@@ -12,7 +12,7 @@ Mainly building _web applications_ with React, Next, Go and Node. Interested in 
 
 I'm _learning by building_, always having a positive mindset accompanied by a _can-do_ attitude.
 
-My _development journey_ as a fullstack developer started at the end of 2019, when I was in the first year of university and discovered React. I can certainly say that I have instantly fallen in love with it.
+My _development journey_ as a fullstack developer started at the end of 2019, when I was in the first year of university and discovered React. I can certainly say that I instantly fell in love with it.
 Shortly after, I wanted my projects to be more interactive so I went ahead and decided to learn more about backend, started by picking up Node with Mongo/Firebase and then learned the basics of SQL.
 
 After a year of building my ideas where everything felt perfect, I wanted to step out of my comfort zone (February-March 2021) and applied to several outsourcing companies. This landed my first internship, which turned in an amazing full time job.
