--- a/posts/writing/finally-shipping.mdx
+++ b/posts/writing/finally-shipping.mdx
@@ -8,7 +8,7 @@ description: "After a year full of 'I will definetly finish my blog', here I am 
 
 I've been constantly saying in the last 7-8 months that _I will definitely finish my blog this month_, but unfortunately they we're all lies, due to the fact that I was looking for perfection and uniqueness.
 
-Going through at least **5 iterations**, all almost completely different from the other, from the way they we're looking, the technologies I was using and the enormous quantity of _useless_ features put just to show-off my UI skills.
+Going through at least **5 iterations**, all almost completely different from the other, from the way they we're looking, the technologies I was using and the enormous quantity of _useless_ features added just to show-off my UI skills.
 
 However, on the _31st of December_, everything changed from the moment that I started designing and coding each iteration.
 
@@ -26,7 +26,7 @@ This is a place full of imperfections that make it _unique_ in it's own way, a p
 
 ## What to expect
 
-As said in the description of the article, this blog will be a place where I share _thoughts and ideas_ that I find interesting and worth writing about.
+This blog will be a place where I share _thoughts and ideas_ that I find interesting and worth writing about in a clumsy manner.
 
 The articles are going to circle around the _UI/UX_ and _Frontend Engineering_ zone, all born from _curiosity_ and _inspiration_.
 
