--- a/posts/writing/finally-shipping.mdx
+++ b/posts/writing/finally-shipping.mdx
@@ -26,7 +26,7 @@ This is a place full of imperfections that make it _unique_ in it's own way, a p
 
 ## What to expect
 
-This blog will be a place where I share _thoughts and ideas_ that I find interesting and worth writing about in a clumsy manner.
+This blog will be a place where I share _thoughts and ideas_ that I find interesting and worth writing about, in a clumsy manner.
 
 The articles are going to circle around the _UI/UX_ and _Frontend Engineering_ zone, all born from _curiosity_ and _inspiration_.
 
