--- a/posts/writing/finally-shipping.mdx
+++ b/posts/writing/finally-shipping.mdx
@@ -20,7 +20,7 @@ After reading Rauno's article, [Real artists ship](https://rauno.me/writing/real
 
 That being said, today, the **1st of January 2022**, I've said to myself that I am going to finally _ship_ something, so I'm starting with a project that's personal and important to me, my personal website.
 
-I've decided to create a place that _feels just like me_, without any "show-off stuff" that does not make any sense. Creating an interface with a simple yet clean UI, with just shades of gray, typography, whitespaces, and some gradients.
+I've decided to create a place that _feels just like me_, without any "show-off stuff" that does not make any sense. Creating an interface with a simple yet clean UI, with nothing but shades of gray, typography, whitespaces, and some gradients.
 
 This is a place full of imperfections that make it _unique_ in its own way, a place that will probably be in a forever _work in progress_ state, a place that _I love_.
 
