--- a/posts/index.mdx
+++ b/posts/index.mdx
@@ -2,6 +2,7 @@
 title: "versatile fullstack developer, building performant web applications..."
 publishedAt: "Jan 01"
 description: "A blog fullfilled with curiosities and good vibes."
+status: "public"
 ---
 
 #### hi there, I'm Marius 👋🏽
