removed context menu, added Copy source on pre tag

--- a/posts/writing/finally-shipping.mdx
+++ b/posts/writing/finally-shipping.mdx
@@ -6,7 +6,7 @@ description: "After a year full of 'I will definetly finish my blog', here I am 
 
 ## 2021
 
-```typescript
+```typescript:file.tsx
 type TProps = {
   name: string;
 };
