--- a/posts/writing/finally-shipping.mdx
+++ b/posts/writing/finally-shipping.mdx
@@ -7,7 +7,7 @@ status: "public"
 
 ## 2021
 
-I've been constantly saying in the last 7-8 months that _I will definitely finish my blog this month_, but unfortunately they we're all lies, due to the fact that I was looking for perfection and uniqueness.
+I've been constantly saying in the last 7-8 months that _I will definitely finish my blog this month_, but unfortunately they were all lies, due to the fact that I was looking for perfection and uniqueness.
 
 Going through at least **5 iterations**, all almost completely different from the other, from the way they we're looking, the technologies I was using and the enormous quantity of _useless_ features added just to show-off my UI skills.
 
