--- a/posts/writing/link-previews.mdx
+++ b/posts/writing/link-previews.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Dissecting link previews..."
-publishedAt: "Jan 01"
-description: "Link previews are a fun and nice to have feature that increase the UX by a lot, but let's see some options of creating them."
+publishedAt: "Jan 23"
+description: "Link previews grew a lot in popularity lately, but let's see some options of creating one."
 status: "private"
 ---
 
