add live example

--- a/posts/writing/link-previews.mdx
+++ b/posts/writing/link-previews.mdx
@@ -5,6 +5,10 @@ description: "Link previews grew a lot in popularity lately, but let's see some 
 status: "private"
 ---
 
+import DemoLinkPreview from "../../demo/LinkPreview";
+
+<DemoLinkPreview />
+
 Lately, link previews grew in popularity and I'm seeing them more often, especially on tech related websites. I feel like having a small box with an image of the destination that is visible whenever you hover the external link is an _amazing idea_ and I would _love_ to see it more often since it is definitely a nice _subtle_ touch.
 
 There are many methods of creating a link preview component, let's go through some of them and see what are the pros and cons of each one.
