--- a/posts/writing/finally-shipping.mdx
+++ b/posts/writing/finally-shipping.mdx
@@ -2,7 +2,7 @@
 title: "Finally shipping in 2022..."
 publishedAt: "Jan 01"
 description: "After a year full of 'I will definetly finish my blog', here I am finally shipping it."
-status: "public"
+status: "private"
 ---
 
 ## 2021
