--- a/posts/writing/link-previews.mdx
+++ b/posts/writing/link-previews.mdx
@@ -2,7 +2,7 @@
 title: "Dissecting link previews..."
 publishedAt: "Jan 23"
 description: "Link previews grew a lot in popularity lately, but let's see some options of creating one."
-status: "public"
+status: "private"
 ---
 
 import DemoLinkPreview from "../../demo/LinkPreview";
