--- a/posts/writing/link-previews.mdx
+++ b/posts/writing/link-previews.mdx
@@ -17,7 +17,7 @@ There are many methods of creating a link preview component, let's go through so
 
 This is definitely the most _popular_ option that I've seen so far, due to the fact that it's really easy to use and also the images get regularly updated.
 
-The images received from [Microlink](https://microlink.io/) are being automatically cached for some time.
+The images received from [Microlink](https://microlink.io/) are being automatically cached, so you don't need to worry about it.
 
 ### But... who ?
 
